Highway6L Ground transitions + update textures

--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -52,9 +52,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Framework\Extensions\NodeExtensions.cs" />
+    <Compile Include="Framework\Extensions\ItemClassExtensions.cs" />
     <Compile Include="Framework\Extensions\MeshExtensions.cs" />
+    <Compile Include="Framework\Extensions\SegmentExtensions.cs" />
     <Compile Include="Framework\MeshAddendumModel.cs" />
-    <Compile Include="Framework\MeshAdder.cs" />
+    <Compile Include="Framework\MeshModel.cs" />
     <Compile Include="Mod.Loading.cs" />
     <Compile Include="Framework\INetInfoModifier.cs" />
     <Compile Include="Framework\Extensions\EnumExtensions.cs" />
