--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -57,8 +57,7 @@
     <Compile Include="Framework\Extensions\ItemClassExtensions.cs" />
     <Compile Include="Framework\Extensions\MeshExtensions.cs" />
     <Compile Include="Framework\Extensions\SegmentExtensions.cs" />
-    <Compile Include="Framework\MeshAddendumModel.cs" />
-    <Compile Include="Framework\MeshModel.cs" />
+    <Compile Include="Framework\MeshData.cs" />
     <Compile Include="NewNetwork\MediumAvenue4LTL\MediumAvenue4LTLBuilder.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Framework\IModPart.cs" />
@@ -86,8 +85,8 @@
     <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LNodeModel.cs" />
     <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LSegmentModel.cs" />
     <Compile Include="NewNetwork\OneWay1L\OneWay1LBuilder.cs" />
-    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LModel.Transition.cs" />
-    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LModel.cs" />
+    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LMeshes.Transition.cs" />
+    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LMeshes.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LNodeModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LSegmentModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\SmallAvenue4LBuilder.cs" />
