--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Framework\Extensions\ItemClassExtensions.cs" />
     <Compile Include="Framework\Extensions\MeshExtensions.cs" />
+    <Compile Include="Framework\Extensions\NodeExtensions.cs" />
+    <Compile Include="Framework\Extensions\SegmentExtensions.cs" />
     <Compile Include="Framework\MeshData.cs" />
     <Compile Include="Framework\MeshImporter\Extensions\MeshExt.cs" />
     <Compile Include="Framework\MeshImporter\Int32Converter.cs" />
@@ -97,8 +99,6 @@
     <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LNodeModel.cs" />
     <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LSegmentModel.cs" />
     <Compile Include="NewNetwork\OneWay1L\OneWay1LBuilder.cs" />
-    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LMeshes.Transition.cs" />
-    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LMeshes.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\SmallAvenue4LBuilder.cs" />
     <Compile Include="NewNetwork\HighwayHelper.cs" />
     <Compile Include="NewNetwork\OneWay4L\OneWay4LBuilder.cs" />
@@ -311,13 +311,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
-    <None Include="NewNetwork\Highway6L\Meshes\Ground_NodeLOD.obj">
+    <None Include="NewNetwork\Highway6L\Meshes\Ground.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="NewNetwork\Highway6L\Meshes\Ground_NodeLOD_Transition.obj">
+    <None Include="NewNetwork\Highway6L\Meshes\GroundTransition.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="NewNetwork\Highway6L\Meshes\Ground_NodeLOD_Transition2.obj">
+    <None Include="NewNetwork\Highway6L\Meshes\LOD_Ground.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="NewNetwork\Highway6L\Meshes\LOD_GroundTransition.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
