Alley currently 2L NOT TESTED!  Far from done but is 8m (1 cell)  please test and play with

--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Framework\Extensions\ObjectCopyExtension.cs" />
     <Compile Include="Framework\Extensions\SegmentExtensions.cs" />
     <Compile Include="Framework\MeshData.cs" />
+    <Compile Include="NewNetwork\Alley\Meshes\AlleyMeshes.cs" />
+    <Compile Include="NewNetwork\Alley\Meshes\AlleyMeshes.Transition.cs" />
+    <Compile Include="NewNetwork\Alley\AlleyBuilder.cs" />
     <Compile Include="NewNetwork\MediumAvenue4LTL\MediumAvenue4LTLBuilder.cs" />
     <Compile Include="NewNetwork\OneWay4L\Meshes\OneWay4LMeshes.Transition.cs" />
     <Compile Include="NewNetwork\OneWay4L\Meshes\OneWay4LMeshes.cs" />
@@ -106,6 +109,18 @@
     <Compile Include="SomeNetwork\PlanningRoadSmallBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="NewNetwork\Alley\infotooltip.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\Alley\Textures\Ground_Segment__AlphaMap.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\Alley\Textures\Ground_Segment__MainTex.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\Alley\thumbnails.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NewNetwork\Highway1L\infotooltip.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
